@@ -168,13 +168,14 @@ int sg_ll_test_unit_ready_progress(int sg_fd, int pack_id, int * progress,
 struct sg_simple_inquiry_resp {
     unsigned char peripheral_qualifier;
     unsigned char peripheral_type;
-    unsigned char byte_1;       /* was rmb only prior to version 1.39 */
+    unsigned char byte_1;       /* was 'rmb' prior to version 1.39 */
+                                /* now rmb == !!(0x80 & byte_1) */
     unsigned char version;      /* as per recent drafts: whole of byte 2 */
     unsigned char byte_3;
     unsigned char byte_5;
     unsigned char byte_6;
     unsigned char byte_7;
-    char vendor[9];
+    char vendor[9];             /* T10 field is 8 bytes, NUL char appended */
     char product[17];
     char revision[5];
 };
